feat: Implement core store, department, and QR code management with request processing, security, database migrations, and initial application configuration.